<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better CUMtd</string>
    <string name="app_name_long">Better CUMtd</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">Nearby Stops</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="arriving_now">%s is arriving now</string>
    <string name="no_departures">No departures in the next hour</string>

    <string name="action_licenses">Licenses</string>
    <string name="license_title">Third Party Licenses</string>
    <string name="search_hint">Search stops</string>
    <string name="toggle_gps">Use GPS</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="stop_frag_title">Stop</string>
    <string name="global_settings_description">Search for bus stops</string>
    <string name="action_search_settings">Global Search Settings</string>
    <string name="about_menu">About</string>
    <string name="data_provided">Data provided by CUMtd</string>
    <string name="author">Created by Nelson Osacky</string>
    <string name="view_source">View source</string>
    <string name="close">Close</string>
    <string name="app_icon_description">App icon</string>
    <string name="no_results">No results found for %s</string>
    <string name="favorites_title">Favorites</string>
    <string name="no_favorites">No favorites</string>

</resources>
