<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.osacky.cumtd.MainActivity" >

    <item android:id="@+id/action_search"
          android:title="@android:string/search_go"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item android:id="@+id/action_clear_history"
          android:title="@string/clear_search_history"
          app:showAsAction="never"
          android:visible="false"
          />

    <item
        android:id="@+id/action_search_settings"
        android:title="@string/action_search_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about_menu"
        android:orderInCategory="101"
        app:showAsAction="never"/>

</menu>
